# exo

./: .clang-format  .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  LICENSE.md  MANIFEST.in  README.md  dev-requirements.txt  flake.nix  halide_blur.html  pyproject.toml  pytest.ini  rebuild.sh  rebuild_and_test_interp.sh  requirements.txt  setup.cfg  temp.py  test.py  tox.ini
SYS_ATL/: API.py  API_types.py  LoopIR.py  LoopIR_compiler.py  LoopIR_dataflow.py  LoopIR_effects.py  LoopIR_interpreter.py  LoopIR_pprint.py  LoopIR_scheduling.py  LoopIR_unification.py  UAST.py  __init__.py  builtins.py  configs.py  debug_frontend_LoopIR.py  effectcheck.py  gemm_malloc.c  grammars.py  instruction_type.py  instructions.py  main.py  malloc.c  mem_analysis.py  memory.py  new_analysis_core.py  new_eff.py  parse_fragment.py  pattern_match.py  prec_analysis.py  prelude.py  proc_eqv.py  pyparser.py  query_asts.py  reflection.py  shared_types.py  syntax.py  typecheck.py  win_analysis.py
apps/: .clang-format  CMakeLists.txt  CMakePresets.json  build.sh  plot.ipynb  plot.py  test_conv.sh
apps/aarch64/filter1D/: filter1D.py  filter1D_cursor_forwarding.py  filter1D_old.py  filter1D_week1.py  filter1D_week2.py
apps/aarch64/filter1D/test/: filter1D.c  filter1D.h
apps/aarch64/sgemm/: CMakeLists.txt  build.sh  demo_stage.py  naive_sgemm.cpp  naive_sgemm.h  sgemm.py
apps/blur/: README.md  blur.py  main.cpp
apps/blur/blur/: blur.c  blur.d  blur.h
apps/gemmini/: CMakeLists.txt
apps/gemmini/cmake/: gemmini.cmake
apps/gemmini/common/: CMakeLists.txt  helpers.c
apps/gemmini/src/: CMakeLists.txt
apps/gemmini/src/common/: CMakeLists.txt  gemm_acc_malloc.c  gemm_malloc.h  helpers.h
apps/gemmini/src/exo/: conv.py  matmul.py
apps/gemmini/src/matmul/: matmul.py
apps/gemmini/src/platform/: CMakeLists.txt  gemm_acc_malloc.c  gemm_acc_malloc.h  gemm_malloc.c
apps/gemmini/src/shims/include/: gemmini_counter.h.in
apps/gemmini/src/shims/rocc-software/src/: xcustom.h.in
apps/gemmini/test/: CMakeLists.txt  conv_17_main.c  conv_30_main.c  conv_3_main.c  matmul_14_main.c  matmul_16_main.c  matmul_27_main.c  matmul_4_main.c  matmul_512x512x512_main.c  matmul_6_main.c  run_conv.c  run_matmul.c
apps/gemmini/test/bare-metal/: CMakeLists.txt
apps/gemmini/test/bare-metal/shims/: gemmini.c
apps/gemmini/test/bare-metal/shims/include/: gemmini.h.in  gemmini_params.h.in  gemmini_testutils.h.in
apps/gemmini/test/bareMetalC/: CMakeLists.txt
apps/halide/blur/: README.md  blur.py  main.cpp
apps/halide/blur/blur/: blur.c
apps/halide/unsharp/: unsharp.py
apps/halide/unsharp/unsharp/: unsharp.c
apps/neon_dev/sgemm/: CMakeLists.txt  build.sh  sgemm.py  test.cpp
apps/scripts/: plot.py
apps/toolchains/: skylakex.cmake
apps/util/: util.hpp
apps/x86/: CMakeLists.txt
apps/x86/conv/: CMakeLists.txt  Halide_Conv_Schedule.txt  conv.py  exo_conv.cpp  halide_conv.cpp  halide_conv.hpp
apps/x86/halide/blur/: .gitignore  blur.py  main.cpp
apps/x86/halide/blur/blur/: blur.c  blur.h
apps/x86/halide/unsharp/: unsharp.py
apps/x86/halide/unsharp/unsharp/: unsharp.c  unsharp.h
apps/x86/sgemm/: CMakeLists.txt  alex_sgemm.cpp  alex_sgemm.h  bench_sgemm.cpp  pldi22_sgemm.c  pldi22_sgemm.h  sgemm.py
apps/x86/ssyrk/: CMakeLists.txt  bench_ssyrk.cpp
apps/x86_demo/: CMakeLists.txt  run_sgemm.cpp  sgemm.py
apps/x86_demo/conv/: CMakeLists.txt  bench_conv.cpp  conv.py  conv_instance.hpp  exo_conv.hpp  halide_conv.cpp  halide_conv_gen.cpp  onednn_conv.cpp  onednn_conv.hpp  sys_atl_conv.cpp  sys_atl_conv.hpp  test_conv.cpp
apps/x86_demo/sgemm/: CMakeLists.txt  alex_sgemm.cpp  bench_sgemm.cpp  sgemm.py  test.cpp
apps/x86_demo/ssyrk/: CMakeLists.txt  bench_ssyrk.cpp  ssyrk.py  test_ssyrk.cpp
docs/: API.md  Cursors.md  Design.md  Imports.md  Metaprogramming.md  Procedures.md  README.md  System.md  buffer_ops.md  configurations.md  externs.md  inspection.md  instructions.md  memories.md  object_code.md
examples/: Blur Demo.ipynb  Demo.ipynb  README.md  arm_matmul.py  halide_in_exo.py  im2col.ipynb  main.c  matmul_interp.py  schedule_sketch.py  x86_matmul.py
githooks/: pre-commit
neon_dev/sgemm/: CMakeLists.txt  build.sh  naive_sgemm.cpp  sgemm.py  test.cpp
tests/: .amx_experiment.c.swp  Makefile  __init__.py  amx.py  amx_experiment.c  amx_experiment.cpp  conftest.py  gemmini.h  gemmini.py  harness_amx.py  harness_gemmini.py  helper.py  ld_st_16  ld_st_16_main.c  load_16  load_16_main.c  main.c  matmul_16_main.c  output  schedule_sketch.py  store_16  store_16_main.c  test.c  test.h  test_alloc.py  test_amx_instr.py  test_analysis.py  test_apps.py  test_blur.py  test_bounds.py  test_call.py  test_chexo.py  (+62 more)
tests/gemmini_rocc_tests/: Makefile.in  README.md  configure.ac
tests/gemmini_rocc_tests/bareMetalC/: Makefile  aligned.c  conv.c  conv_trans_input_3120.c  conv_trans_weight_0132.c  conv_trans_weight_1203.c  conv_with_input_dilation_and_rot180.c  conv_with_kernel_dilation.c  conv_with_pool.c  matmul.c  matmul_os.c  matmul_ws.c  matrix_add.c  mvin_mvout_acc.c  mvin_mvout_acc_full.c  mvin_mvout_acc_full_stride.c  mvin_mvout_acc_stride.c  mvin_mvout_acc_zero_stride.c  mvin_mvout_stride.c  mvin_mvout_zeros.c  mvin_scale.c  padded.c  raw_hazard.c  resadd.c  template.c  tiled_matmul_cpu.c  tiled_matmul_option.c  tiled_matmul_os.c  tiled_matmul_ws.c  tiled_matmul_ws_At.c  tiled_matmul_ws_Bt.c  tiled_matmul_ws_full_C.c  tiled_matmul_ws_low_D.c  tiled_matmul_ws_perf.c  transpose.c
tests/gemmini_rocc_tests/imagenet/: Makefile  images.h  resnet50.c
tests/gemmini_rocc_tests/include/: gemmini.h  gemmini_nn.h  gemmini_params.h  gemmini_params_ee290.h  gemmini_testutils.h  translator.h
tests/gemmini_rocc_tests/mlps/: mlp2_32.c  mlp3.c  mlp3_32.c  mlp4.c  mlp4_32.c  parameters1.h  parameters4.h  parameters7.h  test.c
tests/gemmini_rocc_tests/riscv-tests/benchmarks/common/: crt.S
tests/gemmini_rocc_tests/rocc-software/: .gitignore
tests/gemmini_rocc_tests/rocc-software/src/: xcustom.h
tests/x86_perf/: CMakeLists.txt  CMakePresets.json  README.md  benchmark.cpp
(+978 files in other folders)
