[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:lib2to3 package is deprecated:PendingDeprecationWarning'
]
norecursedirs = ['dependencies']
pythonpath = "src/"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.black]
exclude = '(demo_stage\.py|dependencies/.*|build/.*)'
