[metadata]
name = SYS_ATL
version = attr: SYS_ATL.__version__
include_package_data = True

[options]
packages = find:
install_requires =
    PySMT==0.9.0
    asdl-adt==0.1.0
    astor==0.8.1
    numpy==1.21.2
    yapf==0.31.0

[options.packages.find]
exclude = tests

[options.package_data]
SYS_ATL =
    cmake/*
SYS_ATL.libs =
    *.c

[options.entry_points]
console_scripts =
    sysatlcc = SYS_ATL.main:main
