[metadata]
name = exo-lang
version = attr: exo.__version__
description = Exo: Exocompiled Array Language
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://github.com/ChezJRK/exo
;author = VCLS (Visual Computing Languages & Systems)
;author_email = TBD
maintainer = Alex Reinking
maintainer_email = alex_reinking@berkeley.edu
license = MIT License
keywords = exo, exocompilation, array, dsl, language, performance
python_required =
    >=3.9, <4
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Software Development
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Compilers
include_package_data = True

[options]
packages = find:
package_dir =
    =src
install_requires =
    PySMT>=0.9
    asdl-adt>=0.1,<0.2
    astor>=0.8
    numpy>=1.21.2
    yapf>=0.31
    z3-solver>=4.8.12.0

[options.packages.find]
where = src

[options.package_data]
exo.libs =
    *.c
    *.h

[options.entry_points]
console_scripts =
    exocc = exo.main:main

[options.data_files]
share/exo/cmake =
    src/exo/cmake/*.cmake
