[metadata]
name = exo-lang
version = attr: exo.__version__
description = Exo: Exocompiled Array Language
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://exo-lang.dev/
;author = VCLS (Visual Computing Languages & Systems)
;author_email = TBD
maintainer = Yuka Ikarashi
maintainer_email = yuka@csail.mit.edu
license = MIT License
keywords = exo, exocompilation, array, dsl, language, performance
python_required =
    >=3.9, <4
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Software Development
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Compilers
include_package_data = True

[options]
packages = find:
package_dir =
    =src
install_requires =
    PySMT>=0.9
    asdl-adt>=0.1,<0.2
    asdl>=0.1.5
    build>=0.7.0
    z3-solver>=4.13.0.0
    yapf>=0.32

[options.packages.find]
where = src

[options.package_data]
exo.libs =
    *.c
    *.h

[options.entry_points]
console_scripts =
    exocc = exo.main:main

[options.data_files]
share/exo/cmake =
    src/exo/cmake/*.cmake
